        the test. 
        This setting speeds up the test suite 
        at the cost of making individual test timing less reliable.
        When trying to optimize tests for speed, set gcBeforeTest to TRUE for
        more reliable timing information.
    o   added .Rinstignore to cut down on warnings when building the package

Changes in RUnit 0.4.31
    o   checkEquals and others output optional message on separate line

Changes in RUnit 0.4.30
    o   printJUnitProtocol added for JUnit-style output

Changes in RUnit 0.4.29
    o   changed maintainer to Roman Zenka
    o   .testLogger global variable now stored in package environment RUnitEnv
    o   added imports of graphics package to NAMESPACE

Changes in RUnit 0.4.26
    o   isValidTestSuite: fixed insufficient if expression handling, reported by Rich Calaway; 
        extended validity checks

Changes in RUnit 0.4.25
    o   enable redirection of error and log messages to file, controlled via new 
        global option 'outfile', (following a suggestion by Seth Falcon)

Changes in RUnit 0.4.24
    o   added RUnit specific options 'verbose' and 'silent' to global options list 
        to allow control of test log output
    o   moved unit tests from tests/ to inst/unitTests 
    o   added Makefile for executing unit tests (using R wiki example)

Changes in RUnit 0.4.23
    o   vignette: fixed function name in example code, reported by  Blair Christian
    o   init .testLogger to avoid R CMD check NOTE messages
    o   allow verbosity of console output log to be controlled: added 'verbose' argument
        to runTestFile and runTestSuite (following a suggestion by Seth Falcon)
    o   test logger object declared as S3 class 'TestLogger'

Changes in RUnit 0.4.22
    o   clarified applicable license: GPL 2
    o   defineTestSuite: gained some argument checks
    o   isValidTestSuite: check for empty name
    o   includeTracker: fix `<- if` handling

Changes in RUnit 0.4.21