@@ -150,19 +150,6 @@ testRUnit.checkEquals <- function()
     checkEquals( tPair, tPair)
   }
 
-  if (require(Biobase)) {
-    ##   class still available?
-    #if (isClass(Class="ExpressionSet", formal=TRUE)) {
-    #  ES <- new("ExpressionSet", exprs=matrix(runif(1000), nrow=100, ncol=10))
-    #  checkEquals(ES, ES)
-    #}
-    ##  cleanup workspace
-    ##  catch error if this ns is required by some other package
-    ##  and therefore cannot be unloaded
-    try(unloadNamespace("Biobase"))
-  }
-
-  
   ##  detect differences
   checkException( checkEquals(1 , 1, tolerance=FALSE))
   checkException( checkEquals(1 , 1, tolerance=numeric(0)))
@@ -287,17 +274,18 @@ testRUnit.checkEqualsNumeric <- function()
   ##  exception handling
   ##  type not supported
   checkException( checkEqualsNumeric( list(rvec), list(rvec)))
-  if (require(Biobase)) {
-
-    ##   class still available?
-    if (isClass(Class="ExpressionSet", formal=TRUE)) {
-      ES <- new("ExpressionSet", exprs=matrix(runif(1000), nrow=100, ncol=10))
-      checkException(checkEqualsNumeric(ES, ES))
-    }
-    ##  cleanup workspace
-    try(unloadNamespace("Biobase"))
+  
+  ##  S4 objects
+  if (identical(TRUE, require(methods))) {
+    ##  class defined above
+    s4Obj <- new("track1")
+    s4Obj@x <- 1:10
+    checkException( checkEqualsNumeric( s4Obj, s4Obj))
+    
+    tPair <- new("trackPair")
+    tPair@trackx <- s4Obj
+    checkException( checkEqualsNumeric( tPair, tPair))
   }
-
 }
 
 
